--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -22,8 +22,8 @@
     />
 
     <!--Nosso CSS-->
-    <link rel="stylesheet" href="/Pokedex/assets/css/global.css" />
-    <link rel="stylesheet" href="/Pokedex/assets/css/pokedex.css" />
+    <link rel="stylesheet" href="https://reynatojunior.github.io/Javascript/Pokedex/assets/css/global.css" />
+    <link rel="stylesheet" href="https://reynatojunior.github.io/Javascript/Pokedex/assets/css/pokedex.css" />
   </head>
   <body>
     <header></header>
