--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -57,8 +57,8 @@
 
     <footer>
       <!--Nosso JS-->
-      <script src="/Pokedex/assets/js/poke-api.js"></script>
-      <script src="/Pokedex/assets/js/main.js"></script>
+      <script src="https://reynatojunior.github.io/Javascript/Pokedex/assets/js/poke-api.js"></script>
+      <script src="https://reynatojunior.github.io/Javascript/Pokedex/assets/js/main.js"></script>
     </footer>
   </body>
 </html>
